infra/network.tf
resource "aws_vpc" "tfg_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = { Name = "VPC-TFG" }
}

resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.tfg_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.tfg_vpc.id
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.tfg_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}
